// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render App 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header
        class="sc-kstrdz kgciWm"
        data-testid="yt-header"
      >
        <div
          class="sc-hBEYos bRMCjK"
        >
          <a
            href="/"
          >
            <button
              class="sc-fodVxV GUHCJ"
            />
          </a>
          <div
            class="sc-fFubgz jULViu"
          >
            <input
              class="sc-bkzZxe jPuJSt"
              id="name"
              placeholder="Search..."
              type="text"
              value="wizeline"
            />
            <span
              class="sc-idOhPF glGVqe"
            />
          </div>
        </div>
        <div
          class="sc-hBEYos bRMCjK"
        >
          <div
            class="sc-dIUggk gKMgRC"
          >
            <input
              class="sc-kfzAmx beWIvh"
              id="darkMode"
              name="darkMode"
              type="checkbox"
            />
            <label
              class="sc-hHftDr jAMcvD"
              for="darkMode"
            >
              Dark mode
            </label>
          </div>
          <button
            class="sc-dmlrTW eHmABp"
          />
        </div>
      </header>
      <main
        class="container"
        style="background: rgb(255, 255, 255);"
      >
        <section
          data-testid="yt-videocards"
        >
          <h1
            class="sc-gsTCUz fNcPed"
          >
            Welcome y’all!
          </h1>
          <section
            class="sc-bdfBwQ fGsqqP"
          />
        </section>
      </main>
    </div>
  </body>,
  "container": <div>
    <header
      class="sc-kstrdz kgciWm"
      data-testid="yt-header"
    >
      <div
        class="sc-hBEYos bRMCjK"
      >
        <a
          href="/"
        >
          <button
            class="sc-fodVxV GUHCJ"
          />
        </a>
        <div
          class="sc-fFubgz jULViu"
        >
          <input
            class="sc-bkzZxe jPuJSt"
            id="name"
            placeholder="Search..."
            type="text"
            value="wizeline"
          />
          <span
            class="sc-idOhPF glGVqe"
          />
        </div>
      </div>
      <div
        class="sc-hBEYos bRMCjK"
      >
        <div
          class="sc-dIUggk gKMgRC"
        >
          <input
            class="sc-kfzAmx beWIvh"
            id="darkMode"
            name="darkMode"
            type="checkbox"
          />
          <label
            class="sc-hHftDr jAMcvD"
            for="darkMode"
          >
            Dark mode
          </label>
        </div>
        <button
          class="sc-dmlrTW eHmABp"
        />
      </div>
    </header>
    <main
      class="container"
      style="background: rgb(255, 255, 255);"
    >
      <section
        data-testid="yt-videocards"
      >
        <h1
          class="sc-gsTCUz fNcPed"
        >
          Welcome y’all!
        </h1>
        <section
          class="sc-bdfBwQ fGsqqP"
        />
      </section>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Should render NotFound 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="not-found"
        data-testid="not-found"
      >
        <a
          class="home-link"
          to="/"
        >
          home
        </a>
        <img
          alt="page not found"
          src="404.gif"
        />
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="not-found"
      data-testid="not-found"
    >
      <a
        class="home-link"
        to="/"
      >
        home
      </a>
      <img
        alt="page not found"
        src="404.gif"
      />
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
